@@ -93,17 +93,12 @@
 		      r0
 		      ,@(let* ((count (1+ (max tag ?\\)))
 			       (result (make-vector count '(write-repeat r0))))
-			  (dotimes (i count)
-			    (aset result
-				  i (cond ((eq i tag)
-					   '(break))
-					  ((eq i ?\\)
-					   `((write "\\\\")
+			  (aset result tag '(break))
+			  (aset result ?\\ `((write "\\\\")
 					     (read r0)
 					     ,wrt
 					     (repeat)))
-					  ((eq i ?\")
-					   '((write "\\\"") (repeat))))))
+			  (aset result ?\" '((write "\\\"") (repeat)))
 			  (mapcar 'identity result)))
 		     (write-repeat r0))
 		    (write "\")")
@@ -120,17 +115,11 @@
 		    r0
 		    ,@(let* ((count (1+ (max ?\( ?\) ?\\)))
 			     (result (make-vector count '(repeat))))
-			(dotimes (i count)
-			  (aset result i (cond ((eq i ?\()
-						'((r3 += 1) (repeat)))
-					       ((eq i ?\))
-						'((r3 -= 1)
-						  (if (r3 < 1) (break)
-						    (repeat))))
-					       ((eq i ?\\)
-						`((read r0)
-						  (repeat)))
-					       )))
+			(aset result ?\( '((r3 += 1) (repeat)))
+			(aset result ?\) '((r3 -= 1)
+					   (if (r3 < 1) (break)
+					     (repeat))))
+			(aset result ?\\ `((read r0) (repeat)))
 			(mapcar 'identity result)))
 		   (repeat))
 		  (r2 = 0)
