@@ -314,17 +314,13 @@ If BOUNDARY is not nil, it is used as message header separator."
 		      r0
 		      ,@(let* ((count (1+ (max tag ?\\)))
 			       (result (make-vector count '(write-repeat r0))))
-			  (dotimes (i count)
-			    (aset result
-				  i (cond ((eq i tag)
-					   '(break))
-					  ((eq i ?\\)
-					   `((write "\\\\")
+			  (aset result tag '(break))
+			  (aset result ?\\ `((write "\\\\")
 					     (read r0)
 					     ,wrt
 					     (repeat)))
-					  ((eq i ?\")
-					   '((write "\\\"") (repeat))))))
+			  (aset result ?\" '((write "\\\"")
+					     (repeat)))
 			  (mapcar 'identity result)))
 		     (write-repeat r0))
 		    (write "\")")
@@ -342,20 +338,16 @@ If BOUNDARY is not nil, it is used as message header separator."
 		    r0
 		    ,@(let* ((count (1+ (max ?\( ?\) ?\\)))
 			     (result (make-vector count '(write-repeat r0))))
-			(dotimes (i count)
-			  (aset result i (cond ((eq i ?\()
-						'((r3 += 1) (write-repeat r0)))
-					       ((eq i ?\))
-						'((r3 -= 1)
-						  (if (r3 < 1) (break)
-						    (write-repeat r0))))
-					       ((eq i ?\\)
-						`((write "\\\\")
-						  (read r0)
-						  ,wrt
-						  (repeat)))
-					       ((eq i ?\")
-						'((write "\\\"") (repeat))))))
+			(aset result ?\( '((r3 += 1) (write-repeat r0)))
+			(aset result ?\) '((r3 -= 1)
+					   (if (r3 < 1) (break)
+					     (write-repeat r0))))
+			(aset result ?\\ `((write "\\\\")
+					   (read r0)
+					   ,wrt
+					   (repeat)))
+			(aset result ?\"
+			      '((write "\\\"") (repeat)))
 			(mapcar 'identity result)))
 		   (write-repeat r0))
 		  (write "\")")
